--- a/Stats Final Project.ipynb
+++ b/Stats Final Project.ipynb
@@ -21,33 +21,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "import csv\n",
     "def extractData(filename):\n",
-    "    data = {\n",
-    "           \"grades\": {},\n",
-    "           \"ap\": {}\n",
-    "           }\n",
+    "    data = []\n",
     "    \n",
     "    f = open(filename)\n",
     "    next(f)\n",
     "    \n",
     "    for row in f:\n",
-    "        row = row.split(\"\\t\")\n",
-    "        for element in row:\n",
-    "            element = element.split(\", \")\n",
-    "            for item in element:\n",
-    "                item = item.strip() \n",
-    "                print(item)\n",
-    "            print element\n",
-    "        print row\n",
+    "        grades = row.split(\"\\t\")\n",
+    "        data.append(grades)\n",
+    "        \n",
+    "    return data\n",
     "            \n",
-    "def numberfy(grade):\n",
-    "    dictionary = {\"F\": 0,\n",
+    "numberfy = {\"F\": 0,\n",
     "                 \"D-\": 1,\n",
     "                 \"D\": 2,\n",
     "                 \"D+\": 3,\n",
@@ -60,327 +53,51 @@
     "                 \"A-\": 10,\n",
     "                 \"A\": 11,\n",
     "                 \"A+\":12}\n",
-    "    return dictionary[grade]"
+    "\n",
+    "def cleanData(dirty):\n",
+    "    clean = []\n",
+    "    \n",
+    "    for row in dirty:\n",
+    "        clean_row = []\n",
+    "        for i in range(len(row)):\n",
+    "            if i < 3:\n",
+    "                if len(row[i]) > 2:\n",
+    "                    row[i] = row[i].split(\", \")\n",
+    "                    for j in range(len(row[i])):\n",
+    "                        row[i][j] = numberfy[row[i][j].strip()]\n",
+    "                    clean_row.extend(row[i])\n",
+    "                else:\n",
+    "                    clean_row.append(numberfy[row[i].strip()])\n",
+    "            if i >= 3:\n",
+    "                item = row[i].strip()\n",
+    "                if item != \"\":\n",
+    "                    clean_row.append(item)\n",
+    "        clean.append(clean_row)\n",
+    "    \n",
+    "    return clean\n",
+    "\n",
+    "def writeToFile(clean, new_file):\n",
+    "    with open(new_file, 'wb') as fp:\n",
+    "        a = csv.writer(fp, delimiter=',')\n",
+    "        a.writerows(clean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B+\n",
-      "['B+']\n",
-      "A-\n",
-      "['A-']\n",
-      "B+\n",
-      "A\n",
-      "['B+', 'A']\n",
-      "eng\n",
-      "psych\n",
-      "asr\n",
-      "['eng', 'psych', 'asr\\r\\n']\n",
-      "['B+', 'A-', 'B+, A', 'eng, psych, asr\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "A\n",
-      "['A']\n",
-      "A\n",
-      "A-\n",
-      "['A', 'A-']\n",
-      "eng\n",
-      "cs\n",
-      "psych\n",
-      "['eng', 'cs', 'psych\\r\\n']\n",
-      "['A-', 'A', 'A, A-', 'eng, cs, psych\\r\\n']\n",
-      "D-\n",
-      "['D-']\n",
-      "F\n",
-      "['F']\n",
-      "C\n",
-      "['C']\n",
-      "eng\n",
-      "['eng\\r\\n']\n",
-      "['D-', 'F', 'C', 'eng\\r\\n']\n",
-      "B\n",
-      "['B']\n",
-      "C\n",
-      "C-\n",
-      "['C', 'C-']\n",
-      "B-\n",
-      "B-\n",
-      "['B-', 'B-']\n",
-      "trig\n",
-      "ab\n",
-      "cs\n",
-      "['trig', 'ab', 'cs\\r\\n']\n",
-      "['B', 'C, C-', 'B-, B-', 'trig, ab, cs\\r\\n']\n",
-      "C\n",
-      "['C']\n",
-      "B-\n",
-      "['B-']\n",
-      "D\n",
-      "['D']\n",
-      "eng\n",
-      "['eng\\r\\n']\n",
-      "['C', 'B-', 'D', 'eng\\r\\n']\n",
-      "B+\n",
-      "['B+']\n",
-      "B-\n",
-      "['B-']\n",
-      "B\n",
-      "['B']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['B+', 'B-', 'B', '\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "C\n",
-      "['C']\n",
-      "B+\n",
-      "['B+']\n",
-      "eng\n",
-      "['eng\\r\\n']\n",
-      "['A-', 'C', 'B+', 'eng\\r\\n']\n",
-      "B+\n",
-      "['B+']\n",
-      "B\n",
-      "['B']\n",
-      "C+\n",
-      "A\n",
-      "['C+', 'A']\n",
-      "eng\n",
-      "apes (c)\n",
-      "['eng', 'apes (c)\\r\\n']\n",
-      "['B+', 'B', 'C+, A', 'eng, apes (c)\\r\\n']\n",
-      "B\n",
-      "['B']\n",
-      "C\n",
-      "['C']\n",
-      "C\n",
-      "['C']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['B', 'C', 'C', '\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "B+\n",
-      "['B+']\n",
-      "B\n",
-      "['B']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['A-', 'B+', 'B', '\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "B\n",
-      "['B']\n",
-      "B\n",
-      "['B']\n",
-      "eng\n",
-      "['eng\\r\\n']\n",
-      "['A-', 'B', 'B', 'eng\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "B-\n",
-      "['B-']\n",
-      "B\n",
-      "['B']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['A-', 'B-', 'B', '\\r\\n']\n",
-      "C+\n",
-      "['C+']\n",
-      "C+\n",
-      "['C+']\n",
-      "C-\n",
-      "['C-']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['C+', 'C+', 'C-', '\\r\\n']\n",
-      "B+\n",
-      "['B+']\n",
-      "B\n",
-      "['B']\n",
-      "A-\n",
-      "['A-']\n",
-      "eng\n",
-      "['eng\\r\\n']\n",
-      "['B+', 'B', 'A-', 'eng\\r\\n']\n",
-      "B+\n",
-      "['B+']\n",
-      "B\n",
-      "['B']\n",
-      "B+\n",
-      "['B+']\n",
-      "eng\n",
-      "ab\n",
-      "physics\n",
-      "['eng', 'ab', 'physics\\r\\n']\n",
-      "['B+', 'B', 'B+', 'eng, ab, physics\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "B+\n",
-      "['B+']\n",
-      "B+\n",
-      "['B+']\n",
-      "eng\n",
-      "physics\n",
-      "['eng', 'physics\\r\\n']\n",
-      "['A-', 'B+', 'B+', 'eng, physics\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "A\n",
-      "A\n",
-      "['A', 'A']\n",
-      "A\n",
-      "A+\n",
-      "['A', 'A+']\n",
-      "eng\n",
-      "stats\n",
-      "calc\n",
-      "cs\n",
-      "physics\n",
-      "['eng', 'stats', 'calc', 'cs', 'physics\\r\\n']\n",
-      "['A-', 'A, A', 'A, A+', 'eng, stats, calc, cs, physics\\r\\n']\n",
-      "B-\n",
-      "['B-']\n",
-      "C-\n",
-      "['C-']\n",
-      "D\n",
-      "['D']\n",
-      "eng\n",
-      "['eng\\r\\n']\n",
-      "['B-', 'C-', 'D', 'eng\\r\\n']\n",
-      "B+\n",
-      "['B+']\n",
-      "B+\n",
-      "['B+']\n",
-      "B\n",
-      "['B']\n",
-      "physics\n",
-      "['physics\\r\\n']\n",
-      "['B+', 'B+', 'B', 'physics\\r\\n']\n",
-      "B-\n",
-      "['B-']\n",
-      "B-\n",
-      "['B-']\n",
-      "B\n",
-      "['B']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['B-', 'B-', 'B', '\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "B\n",
-      "['B']\n",
-      "B\n",
-      "B\n",
-      "['B', 'B']\n",
-      "cs\n",
-      "physics\n",
-      "['cs', 'physics\\r\\n']\n",
-      "['A-', 'B', 'B, B', 'cs, physics\\r\\n']\n",
-      "A-\n",
-      "['A-']\n",
-      "A-\n",
-      "['A-']\n",
-      "A\n",
-      "A\n",
-      "['A', 'A']\n",
-      "eng\n",
-      "ab\n",
-      "physics\n",
-      "bio\n",
-      "['eng', 'ab', 'physics', 'bio\\r\\n']\n",
-      "['A-', 'A-', 'A, A', 'eng, ab, physics, bio\\r\\n']\n",
-      "C\n",
-      "['C']\n",
-      "C\n",
-      "['C']\n",
-      "B-\n",
-      "['B-']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['C', 'C', 'B-', '\\r\\n']\n",
-      "B+\n",
-      "['B+']\n",
-      "A\n",
-      "['A']\n",
-      "A\n",
-      "A\n",
-      "['A', 'A']\n",
-      "eng\n",
-      "bio\n",
-      "['eng', 'bio \\r\\n']\n",
-      "['B+', 'A', 'A, A', 'eng, bio \\r\\n']\n",
-      "A\n",
-      "['A']\n",
-      "A\n",
-      "['A']\n",
-      "A\n",
-      "A\n",
-      "['A', 'A']\n",
-      "eng\n",
-      "cs\n",
-      "physics\n",
-      "['eng', 'cs', 'physics\\r\\n']\n",
-      "['A', 'A', 'A, A', 'eng, cs, physics\\r\\n']\n",
-      "D-\n",
-      "['D-']\n",
-      "D\n",
-      "['D']\n",
-      "C+\n",
-      "['C+']\n",
-      "eng\n",
-      "['eng\\r\\n']\n",
-      "['D-', 'D', 'C+', 'eng\\r\\n']\n",
-      "A\n",
-      "['A']\n",
-      "B-\n",
-      "['B-']\n",
-      "C+\n",
-      "['C+']\n",
-      "physics\n",
-      "['physics\\r\\n']\n",
-      "['A', 'B-', 'C+', 'physics\\r\\n']\n",
-      "C+\n",
-      "['C+']\n",
-      "C\n",
-      "['C']\n",
-      "D\n",
-      "['D']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['C+', 'C', 'D', '\\r\\n']\n",
-      "B\n",
-      "['B']\n",
-      "D+\n",
-      "['D+']\n",
-      "B-\n",
-      "['B-']\n",
-      "\n",
-      "['\\r\\n']\n",
-      "['B', 'D+', 'B-', '\\r\\n']\n",
-      "B-\n",
-      "['B-']\n",
-      "C+\n",
-      "['C+']\n",
-      "B-\n",
-      "['B-']\n",
-      "\n",
-      "['']\n",
-      "['B-', 'C+', 'B-', '']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "extractData(\"Juniors.tsv\")"
+    "data = cleanData(extractData(\"Seniors.tsv\"))\n",
+    "writeToFile(data, \"Seniors.csv\")\n",
+    "data = cleanData(extractData(\"Juniors.tsv\"))\n",
+    "writeToFile(data, \"Juniors.csv\")\n",
+    "data = cleanData(extractData(\"Sophomores.tsv\"))\n",
+    "writeToFile(data, \"Sophomores.csv\")\n",
+    "data = cleanData(extractData(\"Freshmen.tsv\"))\n",
+    "writeToFile(data, \"Freshmen.csv\")"
    ]
   },
   {
@@ -390,7 +107,64 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def labelData(clean):\n",
+    "    data = []\n",
+    "    \n",
+    "    for row in clean:\n",
+    "        labeled = {}\n",
+    "        APList = []\n",
+    "        \n",
+    "        if len(row) > 3:\n",
+    "            APList = getAPs(row[3])\n",
+    "\n",
+    "        for i in range(len(row)):\n",
+    "            if i == 0:\n",
+    "                label = \"english\"\n",
+    "                if len(APList) > 0:\n",
+    "                    print APList\n",
+    "                    APList.pop(0)\n",
+    "                    label = \"AP english\"\n",
+    "                    labeled[label] = row[i]\n",
+    "                else:\n",
+    "                    labeled[label] = row[i]\n",
+    "            elif i == 1:\n",
+    "                label = \"math\"\n",
+    "                if len(APList) > 0:\n",
+    "                    print APList\n",
+    "                    if type(row[i]) == list:\n",
+    "                        for j in range(len(row[i])):\n",
+    "                            label = \"AP \" + APList.pop(0)\n",
+    "                            labeled[label] = row[i][j]\n",
+    "                    else:\n",
+    "                        label = \"AP\" + APList.pop(0)\n",
+    "                        labeled[label] = row[i]\n",
+    "                else:\n",
+    "                    labeled[label] = row[i]\n",
+    "            elif i == 2:\n",
+    "                label = \"science\"\n",
+    "                if len(APList) > 0:\n",
+    "                    print APList\n",
+    "                    if type(row[i]) == list:\n",
+    "                        for j in range(len(row[i])):\n",
+    "                            label = \"AP \" + APList.pop(0)\n",
+    "                            labeled[label] = row[i][j]\n",
+    "                    else:\n",
+    "                        label = \"AP \" + APList.pop(0)\n",
+    "                        labeled[label] = row[i]\n",
+    "                else:\n",
+    "                    labeled[label] = row[i]\n",
+    "                \n",
+    "            data.append(labeled)\n",
+    "        return data\n",
+    "                    \n",
+    "def getAPs(arr):\n",
+    "    new = []\n",
+    "    arr = arr.strip().split(\", \")\n",
+    "    for item in arr:\n",
+    "        new.append(item)\n",
+    "    return new"
+   ]
   }
  ],
  "metadata": {
